[gd_scene load_steps=46 format=2]

[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/lighting/light6.png" type="Texture" id=1]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/lighting/light1.png" type="Texture" id=2]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/lighting/light4.png" type="Texture" id=3]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/lighting/light3.png" type="Texture" id=4]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/lighting/light5.png" type="Texture" id=5]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/lighting/light2.png" type="Texture" id=6]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/thegirl_scenemain_naked.png" type="Texture" id=8]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/page_60.png" type="Texture" id=9]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/page_61.png" type="Texture" id=10]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/page_67.png" type="Texture" id=11]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/page_59.png" type="Texture" id=12]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/page_58.png" type="Texture" id=13]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/eye1.png" type="Texture" id=14]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/eye2.png" type="Texture" id=15]
[ext_resource path="res://LCL-FULL + Assets/assets/fonts/haedus/Haedus.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://LCL-FULL + Assets/assets/fonts/curvilingus/Curvilingus.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://LCL-FULL + Assets/assets/fonts/PermanentMarker-Regular.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://new_theme.tres" type="Theme" id=19]
[ext_resource path="res://LCL-FULL + Assets/assets/fonts/Prototype.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/overalyshadow2.png" type="Texture" id=21]
[ext_resource path="res://LCL-FULL + Assets/assets/sound/bg/tired_of_life.ogg" type="AudioStream" id=22]
[ext_resource path="res://LCL-FULL + Assets/assets/sound/noloops/select.mp3" type="AudioStream" id=23]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/tentacle_new1.png" type="Texture" id=24]
[ext_resource path="res://LCL-FULL + Assets/assets/cutscenes/menuscene/tentacle_new2.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": false,
"name": "background_light",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "blink",
"speed": 2.0
} ]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("background:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("girl_body/girl_eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "background_anim"
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("background:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("girl_body/girl_eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.9, 2.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("girl_body/tentacle_1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "t1"
length = 2.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("girl_body/tentacle_1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 4.0, 3.0, 2.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("background/tentacle_2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tentacle_5:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "t2"
length = 3.6
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("background/tentacle_2:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -1.0, -2.0, -3.0, -4.0, -3.0, -2.0, -1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tentacle_5:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 15.0, 16.0, 17.0, 18.0, 19.0, 18.0, 17.0, 16.0, 15.0 ]
}

[sub_resource type="Animation" id=8]
length = 1.7
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("background/tentacle_3:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -15.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "t3"
length = 2.5
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("background/tentacle_3:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -15.0, -14.0, -13.0, -12.0, -11.0, -10.0, -9.0, -10.0, -11.0, -12.0, -13.0, -14.0, -15.0 ]
}

[sub_resource type="Animation" id=10]
length = 1.7
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("background/tentacle_4:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "t4"
length = 3.21
loop = true
step = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("background/tentacle_4:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 2.4, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 5.0, 4.0, 5.0, 6.0 ]
}

[sub_resource type="DynamicFont" id=13]
size = 130
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=16]
size = 65
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=17]
size = 30
font_data = ExtResource( 18 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LOVECRAFT:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 599, -20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LOCKER:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 673, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TENTACLE LUST:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "title_1"
length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("LOVECRAFT:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 599, -20 ), Vector2( 599, -10 ), Vector2( 599, -20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LOCKER:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 673, 120 ), Vector2( 673, 110 ), Vector2( 673, 120 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TENTACLE LUST:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.02 ), Vector2( 1, 1 ) ]
}

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="DynamicFont" id=18]
size = 26
use_filter = true
font_data = ExtResource( 20 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="tentacle_5" type="Sprite" parent="."]
position = Vector2( 64, 453 )
rotation = 0.261799
texture = ExtResource( 24 )

[node name="tentacle_6" type="Sprite" parent="tentacle_5"]
position = Vector2( 269.189, -3.80066 )
rotation = -1.13446
texture = ExtResource( 25 )

[node name="Overalyshadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.980392 )
position = Vector2( 95, 397 )
scale = Vector2( 1.81152, 1.06314 )
texture = ExtResource( 21 )

[node name="Overalyshadow2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.784314 )
position = Vector2( 788, 469 )
rotation = -1.5708
scale = Vector2( 0.98023, 1.34579 )
texture = ExtResource( 21 )
flip_h = true

[node name="Overalyshadow3" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.392157 )
position = Vector2( 491, 406 )
rotation = -3.14235
scale = Vector2( 0.957468, 1.56274 )
z_index = -5
texture = ExtResource( 21 )
flip_h = true

[node name="background" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.952941, 0.807843, 0.807843, 1 )
position = Vector2( 2, -1 )
frames = SubResource( 1 )
animation = "background_light"
frame = 1
offset = Vector2( 510, 300 )

[node name="dark_background" type="Sprite" parent="background"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 510, 298 )
z_index = -4
texture = ExtResource( 11 )

[node name="tentacle_2" type="Sprite" parent="background"]
show_behind_parent = true
position = Vector2( 263, 216 )
z_index = -4
texture = ExtResource( 10 )

[node name="tentacle_3" type="Sprite" parent="background"]
show_behind_parent = true
position = Vector2( 464, 254 )
rotation = -0.261799
z_index = -4
texture = ExtResource( 12 )

[node name="tentacle_4" type="Sprite" parent="background"]
position = Vector2( 675, 381 )
rotation = 0.10472
z_index = -4
texture = ExtResource( 13 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
show_behind_parent = true
position = Vector2( 0, 2 )
z_index = -4
color = Color( 0.807843, 0.807843, 0.807843, 1 )

[node name="girl_body" type="Sprite" parent="."]
position = Vector2( 513, 294 )
z_index = -1
texture = ExtResource( 8 )

[node name="tentacle_1" type="Sprite" parent="girl_body"]
show_behind_parent = true
position = Vector2( -84, -196 )
rotation = 0.0174533
texture = ExtResource( 9 )

[node name="girl_eyes" type="AnimatedSprite" parent="girl_body"]
position = Vector2( -411, -128 )
frames = SubResource( 12 )
animation = "blink"

[node name="background_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/background_anim = SubResource( 3 )

[node name="tentacle_anim1" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/t1 = SubResource( 4 )

[node name="tentacle_anim2" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/t2 = SubResource( 7 )

[node name="tentacle_anim3" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/t3 = SubResource( 9 )

[node name="tentacle_anim4" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/t4 = SubResource( 11 )

[node name="background_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="LOVECRAFT" type="Label" parent="."]
anchor_left = 0.81
anchor_top = 0.099
anchor_right = 0.81
anchor_bottom = 0.099
margin_left = 599.0
margin_top = -20.0
margin_right = 1059.0
margin_bottom = 327.442
custom_colors/font_color = Color( 0.298039, 0.705882, 0.580392, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -8
custom_constants/shadow_offset_y = 10
custom_fonts/font = SubResource( 13 )
text = "LOVECRAFT
"

[node name="LOCKER" type="Label" parent="."]
anchor_left = 0.796
anchor_top = 0.25
anchor_right = 0.796
anchor_bottom = 0.25
margin_left = 673.0
margin_top = 100.0
margin_right = 957.0
margin_bottom = 272.964
custom_colors/font_color = Color( 0.980392, 0.447059, 0.611765, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -10
custom_constants/shadow_offset_y = 6
custom_fonts/font = SubResource( 16 )
text = "LOCKER
"

[node name="TENTACLE LUST" type="Label" parent="."]
anchor_left = 0.859
anchor_top = 0.294
anchor_right = 0.859
anchor_bottom = 0.294
margin_left = -120.616
margin_top = 9.59998
margin_right = 116.384
margin_bottom = 53.6
rect_rotation = -15.0
custom_colors/font_color = Color( 0.815686, 0.219608, 0.235294, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -6
custom_constants/shadow_offset_y = 6
custom_fonts/font = SubResource( 17 )
text = "TENTACLE LUST"

[node name="title_anim1" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/title_1 = SubResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 311.0
margin_top = 3.0
margin_right = 499.0
margin_bottom = 239.0

[node name="New_Game" type="Button" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 44.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Continue")
theme = ExtResource( 19 )
custom_constants/hseparation = 1
text = "New Game"

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 188.0
margin_bottom = 92.0
focus_neighbour_top = NodePath("../New_Game")
focus_neighbour_bottom = NodePath("../Fap_Mode")
theme = ExtResource( 19 )
custom_constants/hseparation = 1
text = "Continue"

[node name="Fap_Mode" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 188.0
margin_bottom = 140.0
focus_neighbour_top = NodePath("../Continue")
focus_neighbour_bottom = NodePath("../Settings")
theme = ExtResource( 19 )
custom_constants/hseparation = 1
text = "Fap Mode"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 188.0
margin_bottom = 188.0
focus_neighbour_top = NodePath("../Fap_Mode")
focus_neighbour_bottom = NodePath("../Quit")
theme = ExtResource( 19 )
custom_constants/hseparation = 1
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 188.0
margin_bottom = 236.0
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../New_Game")
theme = ExtResource( 19 )
custom_constants/hseparation = 1
text = "Quit"

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 823.0
margin_top = 546.0
margin_right = 1012.0
margin_bottom = 585.0
size_flags_vertical = 4
custom_styles/panel = SubResource( 20 )

[node name="Score" type="RichTextLabel" parent="PanelContainer"]
margin_right = 189.0
margin_bottom = 39.0
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
bbcode_enabled = true
bbcode_text = "                 [img]res://LCL-FULL + Assets/assets/ui/heart_emoji_big.png[/img]0"
text = "                 0"
fit_content_height = true

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="button_hover_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[node name="settings_vector" type="Position2D" parent="."]
position = Vector2( 506, 303 )

[connection signal="timeout" from="background_timer" to="." method="_on_background_timer_timeout"]
[connection signal="mouse_entered" from="VBoxContainer/New_Game" to="." method="_on_New_Game_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/New_Game" to="." method="_on_New_Game_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Continue" to="." method="_on_New_Game_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Fap_Mode" to="." method="_on_New_Game_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Settings" to="." method="_on_New_Game_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_New_Game_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
